[package]
name = "keion-etherscan"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"

[lib]
path = "lib.rs"
